--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Bienvenido a tu aplicacion de Openshift</h1>
+            <h1>Welcome to your NodeJS Application on Openshift 3.0</h1>
           </hgroup>
 
 
